--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
                     <button class="btn buy-now-btn">BUY NOW →</button>
                 </div>
             </div>
-        </div>
-   
+        </div>   
+    </div>
+    <div class="container ">
+       <div class="cate">
+        <h1>Categories</h1>
+        <div class="bottom-bg"></div>
+       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
