--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
     <div class="container ">
        <div class="cate">
-        <h1>Categories</h1>
+        <h1 class="text-center">Categories</h1>
         <div class="bottom-bg"></div>
        </div>
     </div>
