--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="card">
                 <img class="card-img-top" src="images/phone/phone-3.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Samsung Note 10</h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <h4>$799</h4>
                     <button class="btn buy-now-btn">BUY NOW →</button>
@@ -147,41 +147,72 @@
         </div>
         <div class="card-deck text-center">
             <div class="card">
-                <img class="card-img-top" src="/images/phone/phone-1.png" alt="Card image cap">
+                <img class="card-img-top" src="/images/laptop/product-1.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Xaiomi Redmi K30 PRO</h5>
+                    <h5 class="card-title">Asus Vivobook</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <h4>$699</h4>
-                    <button class="btn buy-now-btn">BUY NOW →</button>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="/images/phone/phone-2.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">iPhone 11</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
-                    </p>
-                    <h4>$999</h4>
-                    <button class="btn buy-now-btn">BUY NOW →</button>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="images/phone/phone-3.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <h4>$799</h4>
                     <button class="btn buy-now-btn">BUY NOW →</button>
                 </div>
             </div>
-        </div>   
+            <div class="card">
+                <img class="card-img-top" src="/images/laptop/product-2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Razer Blade 15</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <h4>$1299</h4>
+                    <button class="btn buy-now-btn">BUY NOW →</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/laptop/product-3.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Xaiomi Mi Notebook Pro</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <h4>$899</h4>
+                    <button class="btn buy-now-btn">BUY NOW →</button>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="container ">
-       <div class="cate">
-        <h1 class="text-center">Categories</h1>
-        <div class="bottom-bg"></div>
-       </div>
+        <div class="cate">
+            <h1 class="text-center">Categories</h1>
+            <div class="bottom-bg"></div>
+        </div>
+        <div class="row d-flex align-items-center">
+            <div class="col-md-3">
+                <div class="card w-100 d-flex justify-content-center align-items-center p-3">
+                    <div class="card-body ">
+                        <img class="" src="/images/Categories/bag.png" alt="">
+                        <h3>Bag</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                <div class="card w-100 d-flex justify-content-center align-items-center p-3 mb-4">
+                    <div class="card-body">
+                        <img src="/images/Categories/perfume.png" alt="">
+                        <h3>Perfume</h3>
+                    </div>
+
+                </div>
+                <div class="card w-100 d-flex justify-content-center align-items-center p-3">
+                    <div class="card-body">
+                        <img src="/images/Categories/shoe.png" alt="">
+                        <h3>Shoes</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <img class="w-100" src="/images/Categories/pale-order.png" alt="">
+            </div>
+        </div>
     </div>
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
